# zen-app-backend

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
app/: database.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: chat.py  chat_streaming.py  conversations.py  health.py  voice.py
app/core/: config.py
app/models/: __init__.py  conversation.py  memory.py  user.py
app/modules/conversation/: emotion_analyzer.py  prompts.py  service.py  simple_responder.py  suggestion_engine.py
app/modules/memory/: __init__.py  service.py
app/modules/voice/: __init__.py  stt_service.py
app/schemas/: __init__.py  conversation.py
app/services/: __init__.py  embedding_service.py  openrouter_client.py
app/utils/: __init__.py  exceptions.py  logger.py
database_migrations/: 001_add_deleted_at_to_conversations.sql
tests/: test_memory.py
